update title for mac

--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -38,6 +38,8 @@
         .fade-out { animation-name: fadeOut; }
         .slide-out-to-right-10 { animation-name: slideOutToRight; }
 
+        .is-mac .drag-region { padding-left: 80px !important; }
+
         select { background-image: none !important; }
     </style>
 </head>
