--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -53,10 +53,6 @@
             </span>
         </div>
         <div class="flex items-center space-x-4 no-drag">
-            <button id="themeToggle" class="p-2 text-slate-400 hover:text-indigo-500 dark:hover:text-indigo-400 transition-colors">
-                <svg id="sunIcon" class="w-4 h-4 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 9h-1m3.343-5.657l-.707.707m12.728 12.728l-.707.707M6.343 17.657l-.707-.707M17.657 6.343l-.707-.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
-                <svg id="moonIcon" class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
-            </button>
         </div>
     </div>
     
@@ -164,6 +160,30 @@
 
     <!-- Toast 通知容器 -->
     <div id="toastContainer" class="fixed top-12 right-6 left-6 sm:left-auto space-y-3 z-[100] pointer-events-none flex flex-col items-end"></div>
+
+    <!-- 右上角悬浮菜单 (避开系统按钮) -->
+    <div class="fixed top-14 right-6 z-50 no-drag">
+        <button id="menuBtn" class="p-2.5 bg-white/80 dark:bg-slate-900/80 glass rounded-xl shadow-lg border border-slate-200/60 dark:border-slate-800 text-slate-400 hover:text-indigo-500 transition-all active:scale-95 group" title="菜单">
+            <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path></svg>
+        </button>
+        
+        <!-- 下拉菜单容器 -->
+        <div id="mainMenu" class="hidden absolute right-0 mt-2 w-48 bg-white dark:bg-slate-900 rounded-2xl shadow-2xl border border-slate-100 dark:border-slate-800 overflow-hidden animate-in fade-in slide-in-from-top-2 duration-200">
+            <div class="py-2">
+                <button id="githubLink" class="w-full px-5 py-3 hover:bg-indigo-50 dark:hover:bg-indigo-500/10 text-slate-600 dark:text-slate-300 text-sm font-medium transition-colors flex items-center space-x-3">
+                    <svg class="w-4 h-4" fill="currentColor" viewBox="0 0 24 24"><path fill-rule="evenodd" d="M12 2C6.477 2 2 6.484 2 12.017c0 4.425 2.865 8.18 6.839 9.504.5.092.682-.217.682-.483 0-.237-.008-.868-.013-1.703-2.782.605-3.369-1.343-3.369-1.343-.454-1.158-1.11-1.466-1.11-1.466-.908-.62.069-.608.069-.608 1.003.07 1.531 1.032 1.531 1.032.892 1.53 2.341 1.088 2.91.832.092-.647.35-1.088.636-1.338-2.22-.253-4.555-1.113-4.555-4.951 0-1.093.39-1.988 1.029-2.688-.103-.253-.446-1.272.098-2.65 0 0 .84-.27 2.75 1.026A9.564 9.564 0 0112 6.844c.85.004 1.705.115 2.504.337 1.909-1.296 2.747-1.027 2.747-1.027.546 1.379.202 2.398.1 2.651.64.7 1.028 1.595 1.028 2.688 0 3.848-2.339 4.695-4.566 4.943.359.309.678.92.678 1.855 0 1.338-.012 2.419-.012 2.747 0 .268.18.58.688.482A10.019 10.019 0 0022 12.017C22 6.484 17.522 2 12 2z" clip-rule="evenodd"></path></svg>
+                    <span>GitHub 仓库</span>
+                </button>
+                <button id="themeToggle" class="w-full px-5 py-3 hover:bg-indigo-50 dark:hover:bg-indigo-500/10 text-slate-600 dark:text-slate-300 text-sm font-medium transition-colors flex items-center space-x-3">
+                    <div class="relative w-4 h-4">
+                        <svg id="sunIcon" class="w-4 h-4 hidden" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 3v1m0 16v1m9-9h-1M4 9h-1m3.343-5.657l-.707.707m12.728 12.728l-.707.707M6.343 17.657l-.707-.707M17.657 6.343l-.707-.707M16 12a4 4 0 11-8 0 4 4 0 018 0z"></path></svg>
+                        <svg id="moonIcon" class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M20.354 15.354A9 9 0 018.646 3.646 9.003 9.003 0 0012 21a9.003 9.003 0 008.354-5.646z"></path></svg>
+                    </div>
+                    <span id="themeText">切换主题</span>
+                </button>
+            </div>
+        </div>
+    </div>
 
     <!-- 更新弹窗 -->
     <div id="updateNotice" class="hidden fixed bottom-6 left-1/2 -translate-x-1/2 glass dark:bg-slate-900 border border-indigo-100 dark:border-slate-800 px-6 py-4 rounded-2xl shadow-2xl flex items-center space-x-4 animate-in fade-in slide-in-from-bottom-4 duration-500">
