--- a/src/renderer/index.html
+++ b/src/renderer/index.html
@@ -107,7 +107,7 @@
                                             <div class="w-1.5 h-1.5 bg-indigo-500 rounded-full opacity-0 check-mark transition-opacity"></div>
                                         </div>
                                         <div class="option px-5 py-3 hover:bg-indigo-50 dark:hover:bg-indigo-500/10 cursor-pointer text-sm font-medium transition-colors flex items-center justify-between" data-value="2">
-                                            <span>中国移动网盘</span>
+                                            <span>CMCC/ 移动网盘</span>
                                             <div class="w-1.5 h-1.5 bg-indigo-500 rounded-full opacity-0 check-mark transition-opacity"></div>
                                         </div>
                                     </div>
